Button event added

--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -4,7 +4,11 @@
   </h2>
   <div class="task-info">
     <div class="task-category">{{ task.category }}</div>
-    
-    <div class="task-status">{{ task.completed ? "Completed" : "Complete" }}</div>
+
+    <div class="task-status">
+      <button (click)="handleTaskStatusChange()">
+        {{ task.completed ? "Completed" : "Complete" }}
+      </button>
+    </div>
   </div>
 </div>
