--- a/src/app/task/task.component.css
+++ b/src/app/task/task.component.css
@@ -10,7 +10,7 @@
 .task-info {
   margin-top: 10px;
   display: flex;
-  gap: 40px;
+  gap: 10px;
   justify-content: flex-end;
 }
 
@@ -23,5 +23,7 @@
 }
 
 .task-status {
+  border: 1px solid pink;
+  border-radius: 10px;
   padding: 5px 10px;
 }
