--- a/src/app/form-modal/form-modal.component.html
+++ b/src/app/form-modal/form-modal.component.html
@@ -1,12 +1,14 @@
-<button *ngIf="!showTaskForm" (click)="openTaskForm()">Add Task</button>
+<button *ngIf="!showTaskForm" (click)="openTaskForm()" class="primary modal-open-button">
+  Add Task
+</button>
 <div class="modal" *ngIf="showTaskForm">
-  <button (click)="closeTaskForm()">Close Form</button>
-  <h2 class="section-heading">Apply now to live here</h2>
+  <button (click)="closeTaskForm()" class="close-button">X</button>
+  <h2 class="section-heading">Add a New Task</h2>
   <form [formGroup]="applyForm" (submit)="submitApplication()">
     <label for="title">Title</label>
     <input id="title" type="text" formControlName="title" />
     <label for="category">Category</label>
     <input id="category" type="text" formControlName="category" />
-    <button type="submit" class="primary">Add Task</button>
+    <button type="submit" class="primary">Submit</button>
   </form>
 </div>
