--- a/src/app/task/task.component.css
+++ b/src/app/task/task.component.css
@@ -1,4 +1,5 @@
 .task {
+  position: relative;
   margin: auto;
   margin-top: 20px;
   width: 60%;
@@ -26,9 +27,6 @@
   border: 1px solid var(--secondary-color);
   border-radius: 10px;
   padding: 5px 10px;
-}
-
-button {
   border: none;
   font-size: medium;
   color: white;
@@ -44,4 +42,24 @@ button {
 
 .not-completed:hover {
   border: 1.2px solid var(--primary-color);
+}
+
+.delete-button {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  padding: 2px 2px;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  margin: auto;
+  float: right;
+  border: 1px solid;
+  border-radius: 100%;
+  background-color: var(--secondary-color);
+  color: white;
+}
+
+.delete-button:hover {
+  background-color: var(--primary-color);
 }
